# sigconverter.io

./: .dockerignore  .gitignore  Dockerfile  README.md  backends.txt.example  docker-compose.prod.yml  entrypoint.sh  pyproject.toml  requirements.txt  run.py
.github/: dependabot.yml  deploy.yml
.github/workflows/: backend-startup-test.yml  beta-deploy.yml  deploy.yml  packages-test.yml  update-sigma-plugins.yml
app/: main.py  setup.py  worker.py
app/static/js/: index.js
backend/: backend.py  launch-backends.sh  list_sigma_versions.py  pyproject.toml  setup-sigma-plugins.sh  setup-sigma-versions.sh  update_sigma_plugins.py  validate-backend-startup.sh
backend/1.0.3/: pyproject.toml
backend/1.0.4/: pyproject.toml
backend/1.0.5/: pyproject.toml
backend/1.0.6/: pyproject.toml
backend/2.0.0/: pyproject.toml
backend/2.0.1/: pyproject.toml
backend/2.0.2/: pyproject.toml
backend/3.0.0/: pyproject.toml
backend/3.0.1/: pyproject.toml
backend/3.0.2/: pyproject.toml
backend/3.0.3/: pyproject.toml
backend/3.1.0/: pyproject.toml
frontend/: frontend.py  pyproject.toml
frontend/static/css/: style.css
frontend/static/js/: codejar.js  gtag.js  index.js
frontend/templates/: index.html
static/css/: style.css
static/js/: index.js
templates/: index.html
workflows/: packages-test.yml
