[tool.poetry]
name = "sigconverter"
version = "1.0.0"
description = "SigConverter - Sigma rule converter web application"
authors = ["Magic Sword <info@magicsword.io>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = ">=3.10"
flask = ">=3.0.3"
setuptools = ">=75.1.0"
requests = ">=2.32.3"
pyyaml = ">=6.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
