[project]
name = "sigconverter-backend"
version = "1.0.0"
description = "backend for the sigconverter projects"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Magic Sword", email = "info@magicsword.io" }]
dependencies = [
    "flask>=3.0.3",
    "pysigma-backend-carbonblack==0.1.12",
    "pysigma-backend-cortexxdr==0.1.5",
    "pysigma-backend-crowdstrike==2.0.1",
    "pysigma-backend-datadog==0.3.1",
    "pysigma-backend-elasticsearch==1.1.6",
    "pysigma-backend-golangexpr==0.1.2",
    "pysigma-backend-helix==0.1.2",
    "pysigma-backend-insightidr==0.2.4",
    "pysigma-backend-kusto==0.4.5",
    "pysigma-backend-logpoint==0.4.0",
    "pysigma-backend-loki==0.12.4",
    "pysigma-backend-netwitness==0.3.0",
    "pysigma-backend-opensearch==1.0.4",
    "pysigma-backend-panther==0.2.9",
    "pysigma-backend-qradar-aql==0.3.2",
    "pysigma-backend-quickwit==0.1.4",
    "pysigma-backend-secops==0.1.4",
    "pysigma-backend-sentinelone==0.1.3",
    "pysigma-backend-sentinelone-pq==0.1.5",
    "pysigma-backend-splunk==1.1.3",
    "pysigma-backend-sqlite==0.2.0",
    "pysigma-backend-surrealql==0.1.0",
    "pysigma-backend-uberagent==0.3.72",
    "pysigma-pipeline-ocsf==0.1.1",
    "pysigma-pipeline-rclinuxedr==0.1.0",
    "pysigma-pipeline-sysmon==1.0.4",
    "pysigma-pipeline-windows==1.2.0",
    "setuptools>=75.1.0",
    "sigma-cli==1.0.5",
]
