[project]
name = "sigconverter-backend"
version = "1.0.0"
description = "backend for the sigconverter projects"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Magic Sword", email = "info@magicsword.io" }]
dependencies = [
    "flask>=3.0.3",
    "pysigma-backend-carbonblack==0.1.12",
    "pysigma-backend-cortexxdr==0.1.2",
    "pysigma-backend-crowdstrike==3.0.0",
    "pysigma-backend-elasticsearch==2.0.3",
    "pysigma-backend-golangexpr==1.0.0",
    "pysigma-backend-kusto==1.0.1",
    "pysigma-backend-logpoint==1.0.1",
    "pysigma-backend-loki==0.13.0",
    "pysigma-backend-netwitness==0.3.0",
    "pysigma-backend-opensearch==2.0.3",
    "pysigma-backend-panther==0.3.1",
    "pysigma-backend-quickwit==0.1.4",
    "pysigma-backend-secops==1.0.0",
    "pysigma-backend-sentinelone==0.1.3",
    "pysigma-backend-sentinelone-pq==0.1.5",
    "pysigma-backend-splunk==2.1.0",
    "pysigma-backend-sqlite==1.1.3",
    "pysigma-pipeline-ocsf==0.1.2",
    "pysigma-pipeline-sysmon==2.0.0",
    "pysigma-pipeline-windows==2.0.0",
    "setuptools>=75.1.0",
    "sigma-cli==2.0.0",
]
